src/styles/main.css
/* ... */
.portfolio-area .filters .nav-link.active,
.package-area .filters .nav-link.active {
  font-weight: 700;
  border: none;
}



/* portfolio web card */

.screen {
  width: 100%;
  height: 500px;
  position: relative;
  overflow: hidden;
}

.screen img {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  max-width: 100%;
  /* transition: transform 5s ease-in-out 0.5s; */
  margin: 0 auto;
}

.screen:hover img {
  transform: translateY(-100%);
  margin-top: 500px;
}

.image-prop {
  opacity: 1;
  display: block;
  width: 100%;
  transition: 2.5s ease;
  backface-visibility: hidden;
}


/* portfolio web card ends*/



/* portfolio image size fix */

/* .home-about-right{
  margin-top: -250px;
} */
/* 
@media screen and (max-width:767px) {
  .home-about-right{
    margin-top: 40px;
  }
} */


#technologies .single-services>span>img {
  aspect-ratio: 1/1;
}

@media screen and (max-width: 280px) {
  #technologies .single-services h4 {
    font-size: 12px;
  }
}


/* Back to top buttton starts */
#back-to-top {
  height: 3em;
  background-color: #ffffff;
  text-align: center;
  position: fixed;
  bottom: 40px;
  right: 20px;
  border-radius: 50%;
  border: 0px;
  outline: none;
  transition: background-color .3s,
    opacity .5s, visibility .5s, box-shadow 1s;
  opacity: 0;
  visibility: hidden;
  z-index: 1000;
  box-shadow: 0px 0px 0px 0px #00000030;
}


#back-to-top svg path {
  fill: rgb(0, 0, 0);
}

#back-to-top svg {
  border: 0px;
  outline: none;
}

#back-to-top:hover {
  cursor: pointer;
  box-shadow: 0px 0px 0px 20px #00000030;
}

#back-to-top:active {
  background-color: rgb(0, 0, 0);
}

#back-to-top.show {
  opacity: 1;
  visibility: visible;
}

/* Back to top buttton ends */

#nav-menu-container {
  width: 40%;
}

#nav-menu-container .nav-menu.nav-menu-right {
  display: flex;
  justify-content: end;
}


.f-s-14 {
  font-size: 14px;
}


#FigmaPage {
  padding: 80px 120px;
}

.FigmaFrame {
  width: 100%;
}

.description-section {
  border-right: 1px solid rgba(0, 0, 0, 0.1);
  padding-right: 26px;
}

.details-section {
  padding-left: "26px"
}

@media screen and (max-width: 768px) {
  .FigmaFrame {
    width: 100%;
  }


  #FigmaPage {
    padding: 20px 0px;
  }

  .description-section {
    border-right: none;
    padding-right: calc(var(--bs-gutter-x) * .5)
  }
}

.black-btn {
  background: #000;
}

.headerShadow {
  box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
}


#header .nav-menu .navlink a {
  color: #191919;
  cursor: pointer;
}


.back-button i::before {
  margin-left: 0px;
  padding-right: 0px;
  transition: 0.3s all 0s;
}

.back-button:hover i::before {
  margin-left: -6px;
  padding-right: 5px;
  transition: 0.3s all 0s;
  font-size: 15px;
}

